BUG#20073 information_schema.FILES for UNDO LOG give incorrect EXTENT_SIZE, FREE_EXTENTS,

Change things around so that we add a row for each log file group that lists
the free space for that log file group.