sql/ha_ndbcluster.cc
@@ -10439,9 +10439,12 @@ static int ndbcluster_fill_files_table(THD *thd, TABLE_LIST *tables,
       }
 
       table->field[c++]->set_null(); // FILE_ID
+      table->field[c]->set_notnull();
       table->field[c++]->store(elt.name, strlen(elt.name),
                                system_charset_info);
+      table->field[c]->set_notnull();
       table->field[c++]->store("DATAFILE",8,system_charset_info);
+      table->field[c]->set_notnull();
       table->field[c++]->store(df.getTablespace(), strlen(df.getTablespace()),
                                system_charset_info);
       table->field[c++]->set_null(); // TABLE_CATALOG
@@ -10449,10 +10452,12 @@ static int ndbcluster_fill_files_table(THD *thd, TABLE_LIST *tables,
       table->field[c++]->set_null(); // TABLE_NAME
 
       // LOGFILE_GROUP_NAME
+      table->field[c]->set_notnull();
       table->field[c++]->store(ts.getDefaultLogfileGroup(),
                                strlen(ts.getDefaultLogfileGroup()),
                                system_charset_info);
       table->field[c++]->set_null(); // LOGFILE_GROUP_NUMBER
+      table->field[c]->set_notnull();
       table->field[c++]->store(ndbcluster_hton_name,
                                ndbcluster_hton_name_length,
                                system_charset_info); // ENGINE
@@ -10460,11 +10465,16 @@ static int ndbcluster_fill_files_table(THD *thd, TABLE_LIST *tables,
       table->field[c++]->set_null(); // FULLTEXT_KEYS
       table->field[c++]->set_null(); // DELETED_ROWS
       table->field[c++]->set_null(); // UPDATE_COUNT
+      table->field[c]->set_notnull();
       table->field[c++]->store(df.getFree() / ts.getExtentSize()); // FREE_EXTENTS
+      table->field[c]->set_notnull();
       table->field[c++]->store(df.getSize() / ts.getExtentSize()); // TOTAL_EXTENTS
+      table->field[c]->set_notnull();
       table->field[c++]->store(ts.getExtentSize()); // EXTENT_SIZE
 
+      table->field[c]->set_notnull();
       table->field[c++]->store(df.getSize()); // INITIAL_SIZE
+      table->field[c]->set_notnull();
       table->field[c++]->store(df.getSize()); // MAXIMUM_SIZE
       table->field[c++]->set_null(); // AUTOEXTEND_SIZE
 
@@ -10474,8 +10484,10 @@ static int ndbcluster_fill_files_table(THD *thd, TABLE_LIST *tables,
       table->field[c++]->set_null(); // RECOVER_TIME
       table->field[c++]->set_null(); // TRANSACTION_COUNTER
 
+      table->field[c]->set_notnull();
       table->field[c++]->store(df.getObjectVersion()); // VERSION
 
+      table->field[c]->set_notnull();
       table->field[c++]->store("FIXED", 5, system_charset_info); // ROW_FORMAT
 
       table->field[c++]->set_null(); // TABLE_ROWS
@@ -10489,11 +10501,13 @@ static int ndbcluster_fill_files_table(THD *thd, TABLE_LIST *tables,
       table->field[c++]->set_null(); // CHECK_TIME
       table->field[c++]->set_null(); // CHECKSUM
 
+      table->field[c]->set_notnull();
       table->field[c++]->store("NORMAL", 6, system_charset_info);
 
       char extra[30];
       int len= my_snprintf(extra, sizeof(extra), "CLUSTER_NODE=%u", id);
       table->field[c]->store(extra, len, system_charset_info);
+      table->field[c]->set_notnull();
       schema_table_store_record(thd, table);
     }
   }
@@ -10534,8 +10548,10 @@ static int ndbcluster_fill_files_table(THD *thd, TABLE_LIST *tables,
 
       int c= 0;
       table->field[c++]->set_null(); // FILE_ID
+      table->field[c]->set_notnull();
       table->field[c++]->store(elt.name, strlen(elt.name),
                                system_charset_info);
+      table->field[c]->set_notnull();
       table->field[c++]->store("UNDO LOG", 8, system_charset_info);
       table->field[c++]->set_null(); // TABLESPACE NAME
       table->field[c++]->set_null(); // TABLE_CATALOG
@@ -10545,10 +10561,13 @@ static int ndbcluster_fill_files_table(THD *thd, TABLE_LIST *tables,
       // LOGFILE_GROUP_NAME
       NdbDictionary::ObjectId objid;
       uf.getLogfileGroupId(&objid);
+      table->field[c]->set_notnull();
       table->field[c++]->store(uf.getLogfileGroup(),
                                strlen(uf.getLogfileGroup()),
                                system_charset_info);
+      table->field[c]->set_notnull();
       table->field[c++]->store(objid.getObjectId()); // LOGFILE_GROUP_NUMBER
+      table->field[c]->set_notnull();
       table->field[c++]->store(ndbcluster_hton_name,
                                ndbcluster_hton_name_length,
                                system_charset_info); // ENGINE
@@ -10556,11 +10575,15 @@ static int ndbcluster_fill_files_table(THD *thd, TABLE_LIST *tables,
       table->field[c++]->set_null(); // FULLTEXT_KEYS
       table->field[c++]->set_null(); // DELETED_ROWS
       table->field[c++]->set_null(); // UPDATE_COUNT
-      table->field[c++]->store(lfg.getUndoFreeWords()); // FREE_EXTENTS
+      table->field[c++]->set_null(); // FREE_EXTENTS
+      table->field[c]->set_notnull();
       table->field[c++]->store(uf.getSize()/4); // TOTAL_EXTENTS
+      table->field[c]->set_notnull();
       table->field[c++]->store(4); // EXTENT_SIZE
 
+      table->field[c]->set_notnull();
       table->field[c++]->store(uf.getSize()); // INITIAL_SIZE
+      table->field[c]->set_notnull();
       table->field[c++]->store(uf.getSize()); // MAXIMUM_SIZE
       table->field[c++]->set_null(); // AUTOEXTEND_SIZE
 
@@ -10570,6 +10593,7 @@ static int ndbcluster_fill_files_table(THD *thd, TABLE_LIST *tables,
       table->field[c++]->set_null(); // RECOVER_TIME
       table->field[c++]->set_null(); // TRANSACTION_COUNTER
 
+      table->field[c]->set_notnull();
       table->field[c++]->store(uf.getObjectVersion()); // VERSION
 
       table->field[c++]->set_null(); // ROW FORMAT
@@ -10585,13 +10609,102 @@ static int ndbcluster_fill_files_table(THD *thd, TABLE_LIST *tables,
       table->field[c++]->set_null(); // CHECK_TIME
       table->field[c++]->set_null(); // CHECKSUM
 
+      table->field[c]->set_notnull();
       table->field[c++]->store("NORMAL", 6, system_charset_info);
 
       char extra[100];
       int len= my_snprintf(extra,sizeof(extra),"CLUSTER_NODE=%u;UNDO_BUFFER_SIZE=%lu",id,lfg.getUndoBufferSize());
+      table->field[c]->set_notnull();
       table->field[c]->store(extra, len, system_charset_info);
       schema_table_store_record(thd, table);
     }
+  }
+
+  // now for LFGs
+  NdbDictionary::Dictionary::List lfglist;
+  dict->listObjects(lfglist, NdbDictionary::Object::LogfileGroup);
+  ndberr= dict->getNdbError();
+  if (ndberr.classification != NdbError::NoError)
+    ERR_RETURN(ndberr);
+
+  for (i= 0; i < lfglist.count; i++)
+  {
+    NdbDictionary::Dictionary::List::Element& elt= lfglist.elements[i];
+    unsigned id;
+
+    NdbDictionary::LogfileGroup lfg= dict->getLogfileGroup(elt.name);
+    ndberr= dict->getNdbError();
+    if (ndberr.classification != NdbError::NoError)
+    {
+      if (ndberr.classification == NdbError::SchemaError)
+        continue;
+      ERR_RETURN(ndberr);
+    }
+
+    int c= 0;
+    table->field[c++]->set_null(); // FILE_ID
+    table->field[c++]->set_null(); // name
+    table->field[c]->set_notnull();
+    table->field[c++]->store("UNDO LOG", 8, system_charset_info);
+    table->field[c++]->set_null(); // TABLESPACE NAME
+    table->field[c++]->set_null(); // TABLE_CATALOG
+    table->field[c++]->set_null(); // TABLE_SCHEMA
+    table->field[c++]->set_null(); // TABLE_NAME
+
+    // LOGFILE_GROUP_NAME
+    table->field[c]->set_notnull();
+    table->field[c++]->store(elt.name, strlen(elt.name),
+                             system_charset_info);
+    table->field[c]->set_notnull();
+    table->field[c++]->store(lfg.getObjectId()); // LOGFILE_GROUP_NUMBER
+    table->field[c]->set_notnull();
+    table->field[c++]->store(ndbcluster_hton_name,
+                             ndbcluster_hton_name_length,
+                             system_charset_info); // ENGINE
+
+    table->field[c++]->set_null(); // FULLTEXT_KEYS
+    table->field[c++]->set_null(); // DELETED_ROWS
+    table->field[c++]->set_null(); // UPDATE_COUNT
+    table->field[c]->set_notnull();
+    table->field[c++]->store(lfg.getUndoFreeWords()); // FREE_EXTENTS
+    table->field[c++]->set_null(); //store(uf.getSize()/4); // TOTAL_EXTENTS
+    table->field[c]->set_notnull();
+    table->field[c++]->store(4); // EXTENT_SIZE
+
+    table->field[c++]->set_null();//store(uf.getSize()); // INITIAL_SIZE
+    table->field[c++]->set_null(); //store(uf.getSize()); // MAXIMUM_SIZE
+    table->field[c++]->set_null(); // AUTOEXTEND_SIZE
+
+    table->field[c++]->set_null(); // CREATION_TIME
+    table->field[c++]->set_null(); // LAST_UPDATE_TIME
+    table->field[c++]->set_null(); // LAST_ACCESS_TIME
+    table->field[c++]->set_null(); // RECOVER_TIME
+    table->field[c++]->set_null(); // TRANSACTION_COUNTER
+
+    table->field[c]->set_notnull();
+    table->field[c++]->store(lfg.getObjectVersion()); // VERSION
+
+    table->field[c++]->set_null(); // ROW FORMAT
+
+    table->field[c++]->set_null(); // TABLE_ROWS
+    table->field[c++]->set_null(); // AVG_ROW_LENGTH
+    table->field[c++]->set_null(); // DATA_LENGTH
+    table->field[c++]->set_null(); // MAX_DATA_LENGTH
+    table->field[c++]->set_null(); // INDEX_LENGTH
+    table->field[c++]->set_null(); // DATA_FREE
+    table->field[c++]->set_null(); // CREATE_TIME
+    table->field[c++]->set_null(); // UPDATE_TIME
+    table->field[c++]->set_null(); // CHECK_TIME
+    table->field[c++]->set_null(); // CHECKSUM
+
+    table->field[c]->set_notnull();
+    table->field[c++]->store("NORMAL", 6, system_charset_info);
+
+    char extra[100];
+    int len= my_snprintf(extra,sizeof(extra),"UNDO_BUFFER_SIZE=%lu",id,lfg.getUndoBufferSize());
+    table->field[c]->set_notnull();
+    table->field[c]->store(extra, len, system_charset_info);
+    schema_table_store_record(thd, table);
   }
   DBUG_RETURN(0);
 }
